--- a/foreign-store.cabal
+++ b/foreign-store.cabal
@@ -15,7 +15,7 @@ Homepage:            https://github.com/chrisdone/foreign-store
 library
   hs-source-dirs:    src/
   ghc-options:       -Wall -O2
-  exposed-modules:   Foreign.Store
+  exposed-modules:   Foreign.Store, Foreign.Store.Base
   build-depends:     base >= 4 && <5
   c-sources:         cbits/store.c
   include-dirs:      cbits
