--- a/foreign-store.cabal
+++ b/foreign-store.cabal
@@ -1,6 +1,6 @@
 name:                foreign-store
-version:             0.1
-synopsis:            Store a stable pointer in a foreign context to be retrieved later. Persists through GHCi reloads.
+version:             0.2
+synopsis:            Store a stable pointer in a foreign context to be retrieved later.
 description:         Store a stable pointer in a foreign context to be retrieved later. Persists through GHCi reloads.
 license:             BSD3
 license-file:        LICENSE
